# thunderchef-api

./: CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  settings.py
.github/workflows/: ci.yaml
app/: main.py  settings.py
app/services/: recipe_generator_service.py
services/: recipe_generator_service.py
