[project]
name = "thundechef-api"
version = "0.1.0"
description = "Thunderchef backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.5",
    "fastapi[standard]>=0.117.1",
    "openai[aiohttp]>=1.109.1",
    "psycopg2>=2.9.10",
    "pydantic-settings>=2.11.0",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.36.0",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "scm"
update_changelog_on_bump = true
major_version_zero = true
version_files = [
    "pyproject.toml:^(version = )"
]
